@@ -38,6 +38,7 @@
 
 	/* Includes: */
 		#include <avr/io.h>
+		#include <avr/pgmspace.h>
 		#include <util/delay.h>
 
 		#include <LUFA/Drivers/USB/USB.h>
